<resources>
    <string name="app_name">Covid19StatusApp</string>
    <string name="splash_title">COVID19</string>
    <string name="splash_sub_title">Corona Virus Disease 19</string>
    <string name="under_development">Under Development</string>
    <string name="home_title">COVID19</string>
    <string name="confirmed_title">Confirmed</string>
    <string name="recovered_cases">Recovered</string>
    <string name="death_cases">Death</string>
    <string name="countries_title">Countries</string>
</resources>
