<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/home_bg"
    tools:context=".screens.status.HomeCovidFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/dimen_60dp"
        android:layout_height="@dimen/dimen_45dp"
        android:layout_marginTop="@dimen/dimen_24dp"
        android:background="@color/colorPrimaryDark"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toTopOf="@+id/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_24dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:layout_marginEnd="@dimen/dimen_24dp"
        android:gravity="center"
        android:maxLines="1"
        android:singleLine="true"
        android:text="@string/home_title"
        android:textColor="@color/black"
        android:textSize="@dimen/dimen_24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/confirmed_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        tools:text="@string/home_title" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/confirmed_card"
        android:layout_width="102dp"
        android:layout_height="62dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toStartOf="@+id/recovered_card"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/confirmed_cons_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txt_confirmed_overall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_16dp"
                android:layout_marginTop="@dimen/dimen_8dp"
                android:layout_marginEnd="@dimen/dimen_16dp"
                android:gravity="center"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/confirmed_cases"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="25,00,00,000" />

            <TextView
                android:id="@+id/txt_today_confirmed"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_16dp"
                android:layout_marginTop="@dimen/dimen_8dp"
                android:layout_marginEnd="@dimen/dimen_16dp"
                android:layout_marginBottom="@dimen/dimen_8dp"
                android:gravity="center"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="@dimen/dimen_10sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/txt_confirmed_overall"
                app:layout_constraintStart_toStartOf="@+id/txt_confirmed_overall"
                app:layout_constraintTop_toBottomOf="@+id/txt_confirmed_overall"
                tools:text="25,00,00,000" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/recovered_card"
        android:layout_width="102dp"
        android:layout_height="62dp"
        app:layout_constraintEnd_toStartOf="@+id/deaths_card"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/confirmed_card"
        app:layout_constraintTop_toTopOf="@+id/confirmed_card">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/recovered_cons_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txt_recovered_overall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_16dp"
                android:layout_marginTop="@dimen/dimen_8dp"
                android:layout_marginEnd="@dimen/dimen_16dp"
                android:gravity="center"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/recovered_cases"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="25,00,00,000" />

            <TextView
                android:id="@+id/txt_today_recovered"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_16dp"
                android:layout_marginTop="@dimen/dimen_8dp"
                android:layout_marginEnd="@dimen/dimen_16dp"
                android:layout_marginBottom="@dimen/dimen_8dp"
                android:gravity="center"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="@dimen/dimen_10sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/txt_recovered_overall"
                app:layout_constraintStart_toStartOf="@+id/txt_recovered_overall"
                app:layout_constraintTop_toBottomOf="@+id/txt_recovered_overall"
                tools:text="25,00,00,000" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/deaths_card"
        android:layout_width="102dp"
        android:layout_height="62dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/recovered_card"
        app:layout_constraintTop_toTopOf="@+id/recovered_card">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/death_cons_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txt_death_overall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_16dp"
                android:layout_marginTop="@dimen/dimen_8dp"
                android:layout_marginEnd="@dimen/dimen_16dp"
                android:gravity="center"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/death_cases"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="25,00,00,000" />

            <TextView
                android:id="@+id/txt_today_death"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_16dp"
                android:layout_marginTop="@dimen/dimen_8dp"
                android:layout_marginEnd="@dimen/dimen_16dp"
                android:layout_marginBottom="@dimen/dimen_8dp"
                android:gravity="center"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="@dimen/dimen_10sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/txt_death_overall"
                app:layout_constraintStart_toStartOf="@+id/txt_death_overall"
                app:layout_constraintTop_toBottomOf="@+id/txt_death_overall"
                tools:text="25,00,00,000" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/txt_title_confirmed_cases"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/confirmed_title"
        android:textAllCaps="true"
        android:textColor="@color/confirmed_cases"
        app:layout_constraintEnd_toEndOf="@+id/confirmed_card"
        app:layout_constraintStart_toStartOf="@+id/confirmed_card"
        app:layout_constraintTop_toBottomOf="@+id/confirmed_card" />

    <TextView
        android:id="@+id/txt_title_recovered_cases"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recovered_cases"
        android:textAllCaps="true"
        android:textColor="@color/recovered_cases"
        app:layout_constraintBottom_toBottomOf="@+id/txt_title_confirmed_cases"
        app:layout_constraintEnd_toEndOf="@+id/recovered_card"
        app:layout_constraintStart_toStartOf="@+id/recovered_card"
        app:layout_constraintTop_toTopOf="@+id/txt_title_confirmed_cases" />

    <TextView
        android:id="@+id/txt_title_lost_cases"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/death_cases"
        android:textAllCaps="true"
        android:textColor="@color/death_cases"
        app:layout_constraintBottom_toBottomOf="@+id/txt_title_recovered_cases"
        app:layout_constraintEnd_toEndOf="@+id/deaths_card"
        app:layout_constraintStart_toStartOf="@+id/deaths_card"
        app:layout_constraintTop_toTopOf="@+id/txt_title_recovered_cases" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/dimen_8dp"
        android:layout_marginTop="@dimen/dimen_24dp"
        android:layout_marginEnd="@dimen/dimen_8dp"
        android:background="@color/line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_title_confirmed_cases" />

    <TextView
        android:id="@+id/txt_title_countries"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:maxLines="1"
        android:singleLine="true"
        android:text="@string/countries_title"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="@dimen/dimen_12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txt_title_confirmed"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/txt_title_confirmed"
        android:layout_width="@dimen/cell_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:gravity="center"
        android:maxLines="1"
        android:singleLine="true"
        android:text="@string/confirmed_title"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="@dimen/dimen_12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/txt_title_recovered"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/txt_title_countries"
        app:layout_constraintTop_toTopOf="@+id/txt_title_countries" />

    <TextView
        android:id="@+id/txt_title_recovered"
        android:layout_width="@dimen/cell_width"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:maxLines="1"
        android:singleLine="true"
        android:text="@string/recovered_cases"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="@dimen/dimen_12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/txt_title_death"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/txt_title_confirmed"
        app:layout_constraintTop_toTopOf="@+id/txt_title_confirmed" />

    <TextView
        android:id="@+id/txt_title_death"
        android:layout_width="@dimen/cell_width"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:maxLines="1"
        android:singleLine="true"
        android:text="@string/death_cases"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="@dimen/dimen_12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/txt_title_recovered"
        app:layout_constraintTop_toTopOf="@+id/txt_title_recovered" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_covid_status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_title_confirmed"
        app:layout_constraintVertical_bias="0.0"
        tools:listitem="@layout/covid_status_item_view" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>